<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoryBook</string>
    <string name="action_settings">Settings</string>
    <string name="create_album">Create Album</string>
    <string name="add_image">+</string>
    <string name="preview_gif">View</string>
    <string name="publish_to_facebook">Publish</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="retake">Retake</string>
    <string name="delete">Delete</string>
    <string name="insert_photo_before">Insert Photo Before</string>
    <string name="cancel">Cancel</string>
    <string name="turn_reminders_on">Turn Reminders On</string>
    <string name="app_id">692835867402601</string>
    <string name="logout">Logout</string>

</resources>
